# registry

./: .gitignore  .travis.yaml  .travis.yml  404.html  CNAME  Dockerfile  README.md  _config.yml  create_cname.sh  index.html  index.xml  nginx.conf  package-lock.json  package.json  sitemap.xml
_data/: containers.json  tags.yml
_drafts/: draft1.md
_includes/: footer.html  header.html  scroller.html  sidebar.html  tag_header.html  tags.html
_layouts/: blog_by_tag.html  pages.html  posts.html
_maker/: build.sh  cmd.sh  run.sh  setup
_posts/: 2015-09-27-first.md
_site/: CNAME  feed.xml  index.html  params.json  sitemap.xml
_templates/: pages.html  posts.html
about/: index.html
config/: index.js
css/: creative.css
data/: facets.json  search-index.json  stats.json
docs/: 404.html  Gemfile  README.md  index.html  index.xml  sitemap.xml
documentation/: 404.html  Dockerfile  index.html  index.xml  sitemap.xml
img/: header.pxd
js/: creative.js
pipeline/: pyproject.toml
pipeline/biocontainers_pipeline/: build.py  cli.py  emit.py  models.py  normalize.py
pipeline/biocontainers_pipeline/sources/: bioconda.py  containers.py  dockerhub.py  quay.py  repodata.py
pipeline/tests/: test_bioconda.py  test_build.py  test_cli.py  test_containers.py  test_dockerhub.py  test_emit.py  test_models.py  test_normalize.py  test_quay.py  test_repodata.py  test_smoke.py
post/: index.xml
registry/: index.html  script.js
src/: App.vue  main.js
stylesheets/: stylesheet2.css
tag/: general.html  genomics.html  metabolomics.html  new.html  proteomics.html  (+2 more)
(+452 files in other folders)
