[project]
name = "biocontainers-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "click>=8.1", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "responses>=0.25"]

[tool.setuptools.packages.find]
where = ["."]
include = ["biocontainers_pipeline*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = ["network: hits live upstream APIs; opt-in via RUN_NETWORK_TESTS"]
